--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,13 @@
         </activity>
         <activity
             android:name=".MainToolsActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".CompassActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_compass"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme" />
+        <activity android:name=".TorciaActivity"></activity>
     </application>
 
 </manifest>
